--- a/src/Creuna.Episerver.RedirectHandler.TestApp/Web.config
+++ b/src/Creuna.Episerver.RedirectHandler.TestApp/Web.config
@@ -5,7 +5,6 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="episerver" type="EPiServer.Configuration.EPiServerSection, EPiServer.Configuration" />
     <section name="episerver.framework" type="EPiServer.Framework.Configuration.EPiServerFrameworkSection, EPiServer.Framework" restartOnExternalChanges="true" />
@@ -14,7 +13,8 @@
     <section name="episerver.search" type="EPiServer.Search.Configuration.SearchSection, EPiServer.ApplicationModules" />
     <section name="episerver.packaging" type="EPiServer.Packaging.Configuration.EPiServerPackagingSection, EPiServer.Packaging" />
     <section name="bvn404Handler" type="BVNetwork.NotFound.Configuration.Bvn404HandlerConfiguration, BVNetwork.EPi404" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -152,76 +152,76 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.ApplicationModules" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Data.Cache" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Data" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Events" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Framework" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Licensing" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Shell" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.2.0" newVersion="10.0.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Logging.Log4Net" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Configuration" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Enterprise" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.ImageLibrary" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.LinkAnalyzer" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Web.WebControls" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.XForms" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0" />
       </dependentAssembly>
       <probing privatePath="modulesbin" />
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Cms.Shell.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.5.0.0" newVersion="9.5.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.2.0" newVersion="10.0.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Shell.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.5.0.0" newVersion="9.5.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.2.0" newVersion="10.0.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.5.0.0" newVersion="9.5.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.2.0" newVersion="10.0.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Packaging.CmdAPI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
@@ -229,7 +229,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Packaging" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.2.3.0" newVersion="3.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.0.0" newVersion="3.3.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -296,8 +296,9 @@
   <episerver.shell>
     <publicModules rootPath="~/modules/" autoDiscovery="Modules" />
     <protectedModules rootPath="~/EPiServer/">
-      <add name="EPiServer.Packaging.UI" />
-    <add name="Shell" /><add name="CMS" /></protectedModules>
+      <add name="Shell" />
+      <add name="CMS" />
+    <add name="EPiServer.Packaging.UI" /></protectedModules>
   </episerver.shell>
   <!-- 'Static' location added to configure for static files only -->
   <location path="Modules/_Protected">
