--- a/src/Creuna.Episerver.RedirectHandler.UnitTests/packages.config
+++ b/src/Creuna.Episerver.RedirectHandler.UnitTests/packages.config
@@ -5,6 +5,7 @@
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net451" />
   <package id="EPiServer.CMS.Core" version="10.1.0" targetFramework="net451" />
   <package id="EPiServer.Framework" version="10.1.0" targetFramework="net451" />
+  <package id="FluentAssertions" version="5.3.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
@@ -16,4 +17,5 @@
   <package id="Should" version="1.1.20" targetFramework="net451" />
   <package id="structuremap.web-signed" version="3.1.6.186" targetFramework="net451" />
   <package id="structuremap-signed" version="3.1.6.186" targetFramework="net451" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net451" />
 </packages>
